fixes alignment in cards

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1248,7 +1248,7 @@ select.list-dt:focus {
   width: 120px;
   height: 20px;
   margin-right: 16px;
-  margin-top: 39px;
+  margin-top: 25px;
   margin-left: 16px;
 }
 .planyy_hed_p3_s2 h3 {
